--- a/GPU Scraper/GPUScraper.csproj
+++ b/GPU Scraper/GPUScraper.csproj
@@ -30,7 +30,9 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Middlewares\" />
+    <Folder Include="JSON\" />
   </ItemGroup>
+
+  <ProjectExtensions><VisualStudio><UserProperties json_4xkomserialized_1json__JsonSchema="https://datahubproject.io/schemas/datahub_ingestion_schema.json" /></VisualStudio></ProjectExtensions>
 
 </Project>
