--- a/GPU Scraper/appsettings.Development.json
+++ b/GPU Scraper/appsettings.Development.json
@@ -1,4 +1,7 @@
 {
+  "ConnectionStrings": {
+    "ScraperDbLocal": "Server=(localdb)\\mssqllocaldb;Database=Scraper;Trusted_Connection=True"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
