--- a/GPU Scraper/GPUScraper.csproj
+++ b/GPU Scraper/GPUScraper.csproj
@@ -31,7 +31,8 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Seeder\" />
+    <Folder Include="JSON\" />
+    <Folder Include="Validators\" />
     <Folder Include="wwwroot\" />
   </ItemGroup>
 
