--- a/GPU Scraper/appsettings.Development.json
+++ b/GPU Scraper/appsettings.Development.json
@@ -2,6 +2,9 @@
   "ConnectionStrings": {
     "ScraperDbLocal": "Server=(localdb)\\mssqllocaldb;Database=Scraper;Trusted_Connection=True"
   },
+  "AllowedOrigins": {
+    "BlazorClient": ""
+  },
   "Authentication": {
     "JwtKey": "PRIVATE_KEY_DONT_SHARE",
     "JwtExpireDays": 14,
